# plaintext-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
apidocs/source/: conf.py  index.rst
docs/: genindex.html  index.html  modules.html  objects.inv  plaintext_analyzer.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  modules.rst.txt  plaintext_analyzer.rst.txt
plaintext_analyzer/: __init__.py  entry.py  file_reader.py  file_writer.py  phrase_analyzer.py  structure_kg_analyzer.py  vocab_analyzer.py
source/: modules.rst  tests.rst
tests/: test_plaintext_analyzer.py
