[tool.poetry]
name = "plaintext-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
sencore = "^0.1.7"
x2cdict = "^0.1.40"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"

[tool.poetry.scripts]
pta_vocab = "plaintext_analyzer.entry:parser_vocab"
pta_phrase = "plaintext_analyzer.entry:parser_phrase"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
